<resources>
    <string name="app_name">BCOBEN</string>
    <string name="dialog_app_finish_title">서비스 종료</string>
    <string name="dialog_app_finish_content">앱을 종료 하시겠습니까?</string>
    <string name="dialog_permission_title">앱 권한</string>
    <string name="dialog_permission_content">정상적인 앱 사용을 위해 권한을 허용해 주십시오.</string>
    <string name="dialog_permission_setting">권한 설정</string>
    <string name="dialog_app_update_title">앱 업데이트</string>
    <string name="dialog_app_update_content">앱의 새로운 버전이 있습니다.\n정상적인 앱 사용을 위해 업데이트를 진행해 주십시오.</string>
    <string name="dialog_app_update_update">업데이트</string>
    <string name="dialog_app_update_download">다운로드 중</string>
    <string name="dialog_app_update_download_complete">다운로드 완료</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="phone_input">휴대전화번호 입력</string>
    <string name="exit">종료</string>
    <string name="login">로그인</string>
    <string name="back">뒤로</string>
    <string name="close">닫기</string>
    <string name="save">저장하기</string>
    <string name="select">선택</string>
    <string name="cancel">취소</string>
    <string name="delete">삭제</string>
    <string name="confirm">확인</string>
    <string name="registration">등록</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="plus_button">+ 등록</string>
    <string name="minus_button">- 제거</string>
    <string name="toast_error_invalidate">비정상적인 접근입니다</string>
    <string name="toast_error_server">통신 중 에러가 발생했습니다.\n잠시 후 다시 시도해주세요.</string>
    <string name="login_title">현장조사 관리자 시스템에\n로그인하세요.</string>
    <string name="login_id_hint_text">영문,숫자 조합 6자리 이상 입력</string>
    <string name="login_pw_hint_text">영문,숫자,대소문자 조합 10자리 이상 입력</string>
    <string name="login_pw_reset_text">비밀번호 재설정</string>
    <string name="toast_input_id">아이디를 입력해주세요</string>
    <string name="toast_input_pw">비밀번호를 입력해주세요</string>
    <string name="toast_invalid_id">아이디 양식이 맞지 않습니다</string>
    <string name="toast_invalid_pw">비밀번호 양식이 맞지 않습니다</string>
    <string name="toast_not_check_device_id">디바이스 정보가 확인되지 않습니다\n관리자에 문의해 주십시오</string>
    <string name="dialog_permission_content_phone">로그인 하시려면 디바이스 정보를 가져오기 위해\n[전화] 권한을 허용해 주십시오</string>
    <string name="certificate_title">휴대전화로 전송된\n인증 번호를 입력하세요.</string>
    <string name="certificate_send_number">등록된 휴대전화로 인증번호 발송하기 ></string>
    <string name="certificate_input_number">인증번호 입력</string>
    <string name="certificate_remain_time">남은 시간 %s</string>
    <string name="certificate_remain_time_over">인증시간 초과</string>
    <string name="certificate_hint_text">인증번호를 입력하세요</string>
    <string name="certificate_guide_text">인증번호 분실 시 관리자에게 직접 문의하세요</string>
    <string name="certificate_complete">인증완료</string>
    <string name="toast_input_certificate_number">인증번호를 입력하세요</string>
    <string name="toast_input_certificate_number_length">인증번호는 6자리입니다</string>
    <string name="toast_invalid_certificate_number">인증번호가 일치하지 않습니다</string>
    <string name="toast_time_over_certificate_number">인증시간이 경과하였습니다. 재발송하세요</string>
    <string name="reset_certificate_title">아이디, 휴대전화번호를 인증하세요.</string>
    <string name="reset_certificate_send_number">인증번호 발송하기 ></string>
    <string name="reset_certificate_id_hint_text">영문,숫자 조합 6자리 이상 입력</string>
    <string name="reset_certificate_phone_hint_text">휴대전화번호를 입력하세요</string>
    <string name="reset_certificate_hint_text">인증번호를 입력하세요</string>
    <string name="reset_certificate_input_number">인증번호 입력</string>
    <string name="reset_certificate_guide_text">인증번호 분실 시 관리자에게 직접 문의하세요</string>
    <string name="reset_certificate_complete">인증완료</string>
    <string name="toast_input_phone">휴대전화번호를 입력해주세요</string>
    <string name="toast_invalid_phone">휴대전화번호 양식이 맞지 않습니다. 확인해 주세요</string>
    <string name="toast_send_number">인증번호가 발송되었습니다</string>
    <string name="dialog_permission_content_reset_phone">인증번호를 발송 하시려면 디바이스 정보를 가져오기 위해\n[전화] 권한을 허용해 주십시오</string>
    <string name="reset_pw_title">사용할\n비밀번호를 재설정 하세요.</string>
    <string name="reset_pw_input_pw">비밀번호 입력</string>
    <string name="reset_pw_re_input_pw">비밀번호 재입력</string>
    <string name="reset_pw_hint_text">영문,숫자,대소문자 조합 10자리 이상 입력</string>
    <string name="toast_not_equal_pw">입력된 비밀번호가 상이합니다</string>
    <string name="main_project_text">Project</string>
    <string name="main_logout">로그아웃</string>
    <string name="main_version">버전</string>
    <string name="main_update">업데이트</string>
    <string name="main_research_list_title">조사 목록</string>
    <string name="main_research_registration">조사 등록</string>
    <string name="main_research_count">%d/%d개소</string>
    <string name="main_research_list_none">등록된 조사가 없습니다.\n조사 등록을 선택하여 조사를 진행하세요!</string>
    <string name="dialog_permission_content_plan">도면 이미지를 가져오기 위해\n[저장공간, 카메라] 권한을 허용해 주십시오</string>
    <string name="side_menu_grade">진단등급</string>
    <string name="side_menu_facility">시설물</string>
    <string name="side_menu_facility_category">시설물 분류</string>
    <string name="side_menu_architecture">구조형식</string>
    <string name="side_menu_research_category">조사종류</string>
    <string name="side_menu_research_button">조사 입력하기</string>
    <string name="side_menu_research_move_home">홈 이동</string>
    <string name="side_menu_please_select">선택하세요</string>
    <string name="side_menu_detail_safe_check">정밀안전진단</string>
    <string name="side_menu_hint_self">직접입력</string>
    <string name="side_menu_hint_goal_count">목표개소</string>
    <string name="side_menu_summary">프로젝트 개요</string>
    <string name="side_menu_drawings">도면</string>
    <string name="side_menu_project_button">프로젝트 생성하기</string>
    <string name="side_menu_please_input">입력하세요</string>
    <string name="side_menu_please_select_input">선택 및 입력하세요</string>
    <string name="side_menu_hint_input_project_name">프로젝트명을 입력하세요</string>
    <string name="side_menu_project_start_date">시작일자</string>
    <string name="side_menu_project_end_date">종료일자</string>
    <string name="side_menu_hint_project_date">YYYY/MM/DD</string>
    <string name="side_menu_project_next_button">다음 ></string>
    <string name="side_menu_hint_count">목표 개소 입력</string>
    <string name="side_menu_project_upload_drawings">도면을 업로드 하세요</string>
    <string name="side_menu_project_reg_drawings">등록 도면</string>
    <string name="side_menu_reg_cancel">등록 취소</string>
    <string name="toast_input_grade">진단등급을 입력해주세요</string>
    <string name="toast_input_facility">시설물을 입력해주세요</string>
    <string name="toast_input_facility_category">시설을 분류를 입력해주세요</string>
    <string name="toast_input_architecture">구조형식을 입력해주세요</string>
    <string name="toast_input_research">조사종류를 입력해주세요</string>
    <string name="toast_input_research_count">목표개소를 입력해주세요</string>
    <string name="toast_input_project_name">프로젝트명을 입력해주세요</string>
    <string name="toast_input_project_date">프로젝트 기간을 입력해주세요</string>
    <string name="toast_input_select_grade">진단등급을 선택해주세요</string>
    <string name="toast_input_select_facility">시설물을 선택해주세요</string>
    <string name="toast_input_select_facility_category">시설물 분류를 선택해주세요</string>
    <string name="toast_input_select_architecture">구조형식을 선택해주세요</string>
    <string name="toast_input_select_research">조사종류를 선택해주세요</string>
    <string name="toast_input_select_drawings">도면을 등록해주세요</string>
    <string name="toast_input_select_research_count">목표 개소를 선택해주세요</string>
    <string name="toast_input_duplicate_facility">이미 등록된 시설물입니다</string>
    <string name="toast_input_duplicate_fac_cate">이미 등록된 시설물 분류입니다</string>
    <string name="toast_input_duplicate_architecture">이미 등록된 구조형식입니다</string>
    <string name="toast_input_duplicate_research">이미 등록된 조사종류입니다</string>
    <string name="toast_input_duplicate_grade">이미 등록된 진단등급입니다</string>
    <string name="drawings_list_download_all">전체 다운로드</string>
    <string name="toast_download_all_empty">다운로드할 도면이 없습니다</string>
    <string name="toast_download_complete">다운로드가 완료 되었습니다</string>
    <string name="drawings_memo">메모</string>
    <string name="drawings_record">녹음</string>
    <string name="drawings_picture">사진</string>
    <string name="drawings_input">입력</string>
    <string name="drawings_select_dialog_title">도면을 선택하세요</string>
    <string name="drawings_select_dialog_input">현재 도면 내 입력</string>
    <string name="drawings_select_dialog_content">조사종류를 변경할 경우 도면의 내용을 초기화 후\n입력해야합니다.</string>
    <string name="drawings_select_dialog_reset_input">현재 도면 초기화 후 입력</string>
    <string name="drawings_select_dialog_other_select">다른 도면 선택</string>
    <string name="table_title">집계표</string>
    <string name="table_column1">번호</string>
    <string name="table_column2">범례</string>
    <string name="table_column3">부재/방향/결함내용</string>
    <string name="table_column4">측정(값)</string>
    <string name="table_column5">개소</string>
    <string name="toast_table_delete_non_select">삭제할 데이터를 선택해주세요</string>
    <string name="popup_reg_research_input">입력</string>
    <string name="popup_reg_research_picture">사진</string>
    <string name="popup_reg_research_record">음성</string>
    <string name="popup_reg_research_memo">메모</string>
    <string name="popup_reg_research_reg">등록하기</string>
    <string name="popup_reg_research_del">삭제</string>
    <string name="popup_reg_research_save">저장</string>
    <string name="popup_reg_research_input_sub_title">부재</string>
    <string name="popup_reg_research_input_direction">방향</string>
    <string name="popup_reg_research_input_defect_content">결함내용</string>
    <string name="popup_reg_research_input_architecture">구조&amp;비구조&amp;마감재</string>
    <string name="popup_reg_research_input_length">길이</string>
    <string name="popup_reg_research_input_size">- 측정값(mm)</string>
    <string name="popup_reg_research_input_width">가로</string>
    <string name="popup_reg_research_input_height">세로</string>
    <string name="popup_reg_research_input_count">개소</string>
    <string name="popup_reg_research_input_hint1">선택하세요</string>
    <string name="popup_reg_research_input_hint2">입력하세요</string>
    <string name="popup_reg_research_tag_spinner_hint">spn_hint</string>
    <string name="popup_reg_research_tag_input">input</string>
    <string name="popup_reg_research_tag_input_hint">input_hint</string>
    <string name="toast_popup_reg_research_not_defect">결함내용을 선택해주세요</string>
    <string name="toast_popup_reg_research_not_length">길이 측정값을 입력해주세요</string>
    <string name="toast_popup_reg_research_not_width">가로 측정값을 입력해주세요</string>
    <string name="toast_popup_reg_research_not_height">세로 측정값을 입력해주세요</string>
    <string name="toast_popup_reg_research_not_count">개소를 입력해주세요</string>
    <string name="toast_popup_reg_research_over_count">목표개소를 초과하였습니다</string>
    <string name="popup_reg_research_picture_hint">등록하세요</string>
    <string name="popup_reg_research_picture_count_title">등록 항목</string>
    <string name="dialog_permission_content_image">이미지를 가져오기 위해\n[저장공간, 카메라] 권한을 허용해 주십시오</string>
    <string name="popup_reg_research_record_click">클릭하여 녹음하세요</string>
    <string name="popup_reg_research_record_start">재생</string>
    <string name="popup_reg_research_record_stop">일시중지</string>
    <string name="popup_reg_research_record_backwards">-10초</string>
    <string name="popup_reg_research_record_forward">+10초</string>
    <string name="popup_reg_research_record_save">저장</string>
    <string name="toast_popup_reg_research_record_tab_change">녹음을 종료한 후 이동해주세요</string>
    <string name="toast_popup_reg_research_record_register">녹음을 종료한 후 다시 시도해주세요</string>
    <string name="toast_popup_reg_research_record_playing_register">녹음재생을 일시중지한 후 다시 시도해주세요</string>
    <string name="toast_popup_reg_research_record_register_save">저장되지 않은 녹음 파일이 있습니다. 저장을 완료한 후 다시 시도해주세요</string>
    <string name="dialog_permission_content_record">음성 녹음을 위해\n[저장공간, 카메라] 권한을 허용해 주십시오</string>
    <string name="popup_reg_research_memo_guide_text">현재 영역 내 드로잉하여 입력하세요.</string>
    <string name="popup_reg_research_memo_canvas_guide_text">현재 영역 내 드로잉하여 입력하세요.</string>
</resources>