<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    tools:context=".component.AppFinishDialog">

    <TextView
        android:id="@+id/txt_finish_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/dialog_app_finish_title"
        android:textSize="15dp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/txt_finish_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/dialog_app_finish_content"
        android:textSize="15dp"
        android:textColor="@color/colorTextDialogContent"
        app:layout_constraintTop_toBottomOf="@id/txt_finish_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/btn_finish_confirm"
        android:layout_width="145dp"
        android:layout_height="36dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/btn_round_pink"
        android:text="@string/confirm"
        android:textSize="15dp"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintTop_toBottomOf="@id/txt_finish_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
        android:id="@+id/btn_finish_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="15dp"
        android:src="@drawable/close"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>